tests/expected_output/uninitialized-char-array.cpp-fsanitize=valgrind/000000-clang-14.0-x86_64-pc-linux-gnu.txt

Runtime error: uninitialized variable accessed.

Execution stopped in main() in tests/run_time_errors/uninitialized-char-array.cpp at line 8:

int main(int argc, char **argv) { 
	char input[2][10];
	input[argc][argc] = 0;
-->	std::cout << input[0];
}

Values when execution stopped:

argc = 1
input = {<10 uninitialized values>, "\276\000\276\276\276\276\276\276\276\276"}
input[0] = <10 uninitialized values>
input[argc][argc] = 0 = '\0'
